--- a/css/common.css
+++ b/css/common.css
@@ -250,6 +250,7 @@ footer > .container {
 }
 .social-box .social.list {
   padding: 0;
+  margin-right: 93px;
 }
 footer .social-icon-image {
   width: 20px;
@@ -290,4 +291,47 @@ button {
   height: 4px;
   background-color: var(--accent-color);
   border-radius: 2px;
+}
+/* footer-form */
+.footer-form-paragraph {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
+  margin-bottom: 20px;
+}
+.e-mail {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: var(--footer-white-color);
+  width: 358px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: transparent;
+  margin-right: 12px;
+}
+
+.footer-form-button {
+  display: inline-flex;
+  align-items: center;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 1px solid transparent;
+  padding: 10px 28px;
+}
+.footer-form-icon {
+  margin-left: 10px;
 }
