--- a/css/common.css
+++ b/css/common.css
@@ -302,11 +302,8 @@ button {
   margin-bottom: 20px;
 }
 .e-mail {
-  font-weight: 400;
-  font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  color: var(--footer-white-color);
   width: 358px;
   padding-top: 15px;
   padding-bottom: 15px;
@@ -334,4 +331,10 @@ button {
 }
 .footer-form-icon {
   margin-left: 10px;
+}
+
+.footer-form input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--footer-white-color);
 }
