--- a/css/main.css
+++ b/css/main.css
@@ -224,4 +224,32 @@
   padding: 5px;
   margin-top: 7px;
   margin-right: 8px;
+  position: absolute;
+}
+.modal-form {
+  padding: 40px;
+}
+.modal-form-paragraph {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  margin-bottom: 12px;
+}
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--secondary-black-color);
+}
+
+.modal-field {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.form-field label {
+  margin-bottom: 4px;
 }
