--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@
   line-height: 1.88;
   letter-spacing: 0.06em;
 }
+
 /* our-features section headline */
 .our-features-headline {
   font-weight: 700;
@@ -228,12 +229,12 @@
 }
 .modal-form {
   padding: 40px;
+  text-align: center;
 }
 .modal-form-paragraph {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
-  text-align: center;
   margin-bottom: 12px;
 }
 .form-field {
@@ -244,12 +245,32 @@
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: var(--secondary-black-color);
+  text-align: left;
 }
 
 .modal-field {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  resize: none;
 }
 .form-field label {
   margin-bottom: 4px;
+}
+
+.policy.link {
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--accent-color);
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  display: inline-block;
+}
+.checkbox-field label {
+  font-size: 14px;
+  line-height: 1.71px;
+  letter-spacing: 0.03em;
+  color: var(--secondary-black-color);
+}
+.checkbox-field {
+  margin-bottom: 30px;
 }
