--- a/css/main.css
+++ b/css/main.css
@@ -201,7 +201,7 @@
   left: 50%;
   transform-origin: top right;
   transform: translate(-50%, -50%) scale(1) rotate(360deg);
-  width: 528px;
+  /* width: 528px; */
   min-height: 581px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -232,6 +232,7 @@
   text-align: center;
 }
 .modal-form-paragraph {
+  width: 448px;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
