--- a/css/main.css
+++ b/css/main.css
@@ -238,6 +238,7 @@
   margin-bottom: 12px;
 }
 .form-field {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
@@ -247,16 +248,26 @@
   color: var(--secondary-black-color);
   text-align: left;
 }
-
+.modal-input-icon {
+  position: absolute;
+  transform: translateY(29px) translateX(13px);
+}
 .modal-field {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
+  min-height: 40px;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  padding: 12px 42px;
 }
 .form-field label {
   margin-bottom: 4px;
 }
-
+.form-field .modal-field:last-child {
+  padding: 12px 16px;
+}
 .policy.link {
   font-size: 14px;
   line-height: 1.71;
