--- a/css/main.css
+++ b/css/main.css
@@ -248,6 +248,10 @@
   color: var(--secondary-black-color);
   text-align: left;
 }
+.form-field textarea {
+  width: 448px;
+  height: 127px;
+}
 .modal-input-icon {
   position: absolute;
   bottom: 0;
@@ -263,6 +267,18 @@
   line-height: 1.14;
   letter-spacing: 0.01em;
   padding: 12px 12px;
+  padding-left: 42px;
+  outline: none;
+}
+.modal-field:focus-within,
+.modal-field:hover {
+  border: 1px solid var(--accent-color);
+  transition: var(--transition-time-and-function);
+}
+.modal-field:focus-within + .modal-input-icon,
+.modal-field:hover + .modal-input-icon {
+  fill: var(--accent-color);
+  transition: var(--transition-time-and-function);
 }
 .form-field label {
   margin-bottom: 4px;
@@ -286,4 +302,24 @@
 }
 .checkbox-field {
   margin-bottom: 30px;
+}
+.close-button:hover .modal-icon,
+.close-button:focus .modal-icon {
+  fill: var(--accent-color);
+}
+
+.policy-label::before {
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  margin-right: 7px;
+  border: 2px solid var(--primary-black-color);
+  border-radius: 4px;
+  transition: var(--transition-time-and-function);
+}
+.policy-field:checked + .policy-label::before {
+  background-image: url(../images/modal/tick-icon.svg);
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
 }
