--- a/css/common.css
+++ b/css/common.css
@@ -301,6 +301,10 @@ button {
   color: var(--primary-white-color);
   margin-bottom: 20px;
 }
+.footer-box {
+  display: flex;
+  flex-direction: row;
+}
 .e-mail {
   line-height: 1.25;
   letter-spacing: 0.03em;
