adds footer-form placeholder selector to common css

--- a/css/common.css
+++ b/css/common.css
@@ -337,6 +337,7 @@ button {
   margin-left: 10px;
 }
 
+.footer-form input[placeholder="E-mail"],
 .footer-form input::placeholder {
   font-weight: 400;
   font-size: 16px;
